<resources>
    <string name="app_name">AKT Mileage Tracker</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Location</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="description_map_view">Map</string>
    <string name="cb_business_trip">Business trip</string>
    <string name="cb_is_business">Business</string>
    <string name="btn_new_trip">New Trip</string>
    <string name="map_description">Map</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="start_trip">Start Trip</string>
    <string name="stop_trip">Stop Trip</string>
    <string name="et_hint">Enter the cents per mile deduction as an integer.</string>
    <string name="delete_trip">Delete Trip</string>
</resources>