<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="us.ak_tech.aktmileagetracker.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="us.ak_tech.aktmileagetracker.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard">
        <action
            android:id="@+id/show_crime_details"
            app:destination="@id/navigation_notifications" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="us.ak_tech.aktmileagetracker.ui.details.TripDetailFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_trip_details">
        <action
            android:id="@+id/select_date"
            app:destination="@id/datePickerFragment" />
        <argument
            android:name="tripId"
            app:argType="java.util.UUID" />
    </fragment>
    <dialog
        android:id="@+id/datePickerFragment"
        android:name="us.ak_tech.aktmileagetracker.DatePickerFragment"
        android:label="DatePickerFragment">
        <argument
            android:name="tripDate"
            app:argType="java.time.LocalDateTime" />
    </dialog>
</navigation>