<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.details.TripDetailFragment">

    <TextView
        android:id="@+id/text_notifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        tools:text="Location"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/map_description"
        app:layout_constraintBottom_toTopOf="@+id/text_notifications"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mapView2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvStartDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_date"
            android:textAppearance="?attr/textAppearanceHeadline5"
            app:layout_constraintBottom_toBottomOf="@+id/btnStartDate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btnStartDate" />

        <Button
            android:id="@+id/btnStartDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="start date"
            android:layout_marginStart="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvStartDate"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvEndDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_date"
            android:textAppearance="?attr/textAppearanceHeadline5"
            app:layout_constraintBottom_toBottomOf="@+id/btnEndDate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btnEndDate" />

        <Button
            android:id="@+id/btnEndDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvEndDate"
            app:layout_constraintTop_toBottomOf="@+id/btnStartDate"
            tools:text="end date" />

        <TextView
            android:id="@+id/text4"
            android:layout_width="90dp"
            android:layout_height="42dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="TEXT" />


        <CheckBox
            android:id="@+id/cbIsBusiness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cb_is_business"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnEndTime" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_time"
            android:textAppearance="?attr/textAppearanceHeadline5"
            app:layout_constraintBottom_toBottomOf="@+id/btnStartTime"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btnStartTime"
            android:id="@+id/tvStartTime" />

        <Button
            android:id="@+id/btnStartTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="Start Time"
            android:layout_marginStart="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvStartTime"
            app:layout_constraintTop_toBottomOf="@+id/btnEndDate" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_time"
            android:textAppearance="?attr/textAppearanceHeadline5"
            app:layout_constraintBottom_toBottomOf="@+id/btnEndTime"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btnEndTime"
            android:id="@+id/tvEndTime" />

        <Button
            android:id="@+id/btnEndTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="End Time"
            android:layout_marginStart="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvEndTime"
            app:layout_constraintTop_toBottomOf="@+id/btnStartTime" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>